# Music-Quiz_CPP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/.workflows/: compile.yml
.github/workflows/: compile.yml
AppImageBuild/: linuxdeploy-plugin-gstreamer.sh  linuxdeploy-x86_64.AppImage
build_scripts/: build_common.sh  build_linux.sh  build_mac.sh  build_windows.sh  dependencies_arch.sh  dependencies_mac.sh  dependencies_ubuntu.sh  dependencies_windows.sh
cmake/: FindBoost.cmake  FindQt.cmake
documentation/: CodingGuidelines.md  INSTALL.md
src/: CMakeLists.txt
src/audio/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt
src/common/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Log.cpp  Log.hpp  TimeUtil.cpp  TimeUtil.hpp
src/gui_tools/: CMakeLists.txt
src/gui_tools/GuiUtil/: CMakeLists.txt  ProgramSelector.cpp  ProgramSelector.hpp  QuizIntroScreen.cpp  QuizIntroScreen.hpp  QuizSelector.cpp  QuizSelector.hpp  QuizWinningScreen.cpp  QuizWinningScreen.hpp  SomeWidget.cpp  SomeWidget.hpp  TeamSelector.cpp  TeamSelector.hpp
src/gui_tools/GuiUtil/ColorPicker/: CMakeLists.txt  QGradientSlider.cpp  QGradientSlider.hpp  QHueSlider.cpp  QHueSlider.hpp
src/gui_tools/GuiUtil/QExtensions/: CMakeLists.txt  QPushButtonExtender.cpp  QPushButtonExtender.hpp  QTabBarExtender.cpp  QTabBarExtender.hpp  QTabWidgetExtender.cpp  QTabWidgetExtender.hpp
src/gui_tools/Jeopardy/: CMakeLists.txt  JeopardyGUI.cpp  JeopardyGUI.hpp  JeopardyGUI.ui  jeopardy_resources.qrc  main.cpp
src/gui_tools/MusicQuiz/: CMakeLists.txt  MusicQuizController.cpp  MusicQuizController.hpp  MusicQuizGUI.cpp  MusicQuizGUI.hpp  MusicQuizGUI.ui  main.cpp  musicQuiz_resources.qrc  stylesheet_musicQuiz.qss
src/gui_tools/QuizCreator/: CMakeLists.txt  CategoryCreator.cpp  CategoryCreator.hpp  EntryCreator.cpp  EntryCreator.hpp  LoadCategoryDialog.cpp  LoadCategoryDialog.hpp  LoadDialog.cpp  LoadDialog.hpp  LoadQuizDialog.cpp  LoadQuizDialog.hpp  QuizCreator.cpp  QuizCreator.hpp  QuizData.cpp  QuizData.hpp
src/gui_tools/widgets/: CMakeLists.txt  LightDeviceConnectedWidget.cpp  LightDeviceConnectedWidget.hpp  QuizBoard.cpp  QuizBoard.hpp  QuizCategory.cpp  QuizCategory.hpp  QuizEntry.cpp  QuizEntry.hpp  QuizFactory.cpp  QuizFactory.hpp  QuizSettingsDialog.cpp  QuizSettingsDialog.hpp  QuizTeam.cpp  QuizTeam.hpp
src/lightcontrol/: CMakeLists.txt
src/lightcontrol/client/: CMakeLists.txt  DeviceState.cpp  DeviceState.hpp  LightControlClient.cpp  LightControlClient.hpp
src/lightcontrol/client/messages/: CMakeLists.txt  GlitterMessage.cpp  GlitterMessage.hpp  LightModeMessage.cpp  LightModeMessage.hpp  LightModes.hpp  NodeInfoMessage.cpp  NodeInfoMessage.hpp  OnBoardLEDStrength.cpp  OnBoardLEDStrength.hpp  PackageTypes.hpp  PendingMessage.hpp  PulseMessage.cpp  PulseMessage.hpp  RainbowMessage.cpp  RainbowMessage.hpp  RunningSectionsMessage.cpp  RunningSectionsMessage.hpp  SerializableMessage.hpp  StrobeMessage.cpp  StrobeMessage.hpp
src/lightcontrol/discover/: CMakeLists.txt  LightControlDiscover.cpp  LightControlDiscover.hpp  mdns_helper.c  mdns_helper.h
src/media/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.hpp  VideoWidget.cpp  VideoWidget.hpp
src/tests/: CMakeLists.txt  lightTest.cpp  test_file.cpp  test_helloWorld.cpp
src/util/: CMakeLists.txt  QuizLoader.cpp  QuizLoader.hpp  QuizSettings.cpp  QuizSettings.hpp
src/widgets/: CMakeLists.txt  QuizBoard.cpp  QuizBoard.hpp  QuizCategory.cpp  QuizCategory.hpp  QuizEntry.cpp  QuizEntry.hpp  QuizFactory.cpp  QuizFactory.hpp  QuizSettingsDialog.cpp  QuizSettingsDialog.hpp  QuizTeam.cpp  QuizTeam.hpp
travis/: build_linux.sh  build_windows.sh  dependencies_arch.sh  dependencies_ubuntu.sh
